# sprites-claude-managed-agents

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
dispatch/: README.md  pyproject.toml
dispatch/src/sprites_claude_managed_agents_dispatch/: config.py  main.py  sandbox.py
dispatch/tests/: test_sandbox.py  test_webhook.py
worker/: README.md  pyproject.toml
worker/src/sprites_claude_managed_agents_worker/: main.py  tasks.py
